--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,14 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
+    //firebase purposes
+//    classpath 'com.google.gms:google-services:4.0.1'
+    implementation 'com.google.firebase:firebase-database:16.0.1'
+    implementation 'com.google.firebase:firebase-core:16.0.8'
+
+
 
 
 }
+
+apply plugin: 'com.google.gms.google-services'
